<resources>
    <string name="app_name">MediRec</string>
    <string name="action_settings">Settings</string>
    <string name="button">NumPad</string>
    <string name="main_header">Register Pin (6 Digits)</string>
    <string name="PIN">PIN</string>
    <string name="Wrong_PIN">Wrong PIN</string>
    <string name="Retype_PIN">Retype PIN</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="logInSuccess">SIGNING IN SUCCESS</string>
    <string name="viewQR">GET RECORDS</string>
    <string name="scan">SCAN</string>
    <string name="generateKey">Generate\nKey</string>
    <string name="changePIN">Change PIN</string>
    <string name="exit">EXIT</string>
    <string name="title_activity_view_qr">ViewQrActivity</string>
    <string name="reallyExit">Do you want to exit?</string>
    <string name="scan_again">Scan Again</string>
    <string name="back_to_menu_scan">Back to Menu</string>
    <string name="QRCode">QR Code</string>
    <string name="back">Back</string>
    <string name="reallyChangePin">Do you really want to change PIN?</string>
    <string name="saveAndMain">Save</string>
    <string name="discardAndMain">Discard</string>
    <string name="generate">Generate</string>
    <string name="selectAll">Select All</string>
    <string name="backArrow">←</string>
    <string name="clearAll">Clear\nAll</string>
    <string name="clear">Clear</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="exportID">Export\nIdentity</string>
    <string name="importID">Import\nIdentity</string>
</resources>