<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_menu"
        tools:context=".MenuActivity">

    <LinearLayout
            android:id="@+id/logInSuccess"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
    </LinearLayout>
    <Button
            android:text="@string/viewQR" android:id="@+id/myQRcode"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            app:layout_constraintHorizontal_bias="0.15" app:layout_constraintVertical_bias="0.1"
            app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:textSize="18sp" android:width="135dp" android:height="135dp"/>
    <Button
            android:text="@string/importID" android:id="@+id/importID"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            app:layout_constraintHorizontal_bias="0.15" app:layout_constraintVertical_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:textSize="18sp" android:width="135dp" android:height="135dp"/>
    <Button
            android:text="@string/exportID" android:id="@+id/exportID"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            app:layout_constraintHorizontal_bias="0.15" app:layout_constraintVertical_bias="0.9"
            app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:textSize="18sp" android:width="135dp" android:height="135dp"/>
    <Button
            android:text="@string/generateKey" android:id="@+id/generateKey"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            app:layout_constraintHorizontal_bias="0.85" app:layout_constraintVertical_bias="0.1"
            app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:textSize="18sp" android:width="135dp" android:height="135dp"/>
    <Button
            android:text="@string/changePIN" android:id="@+id/changePin"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            app:layout_constraintHorizontal_bias="0.85" app:layout_constraintVertical_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="18sp" android:width="135dp" android:height="135dp"/>
    <Button
            android:text="@string/exit" android:id="@+id/exit"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            app:layout_constraintHorizontal_bias="0.85" app:layout_constraintVertical_bias="0.9"
            app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:textSize="18sp" android:width="135dp" android:height="135dp"/>
</android.support.constraint.ConstraintLayout>