<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".GenerateKeyActivity">

    <Button app:layout_constraintVertical_bias="0.875" app:layout_constraintHorizontal_bias="0.75"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:id="@+id/scanButton" app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:height="60dp" android:width="100dp" android:text="@string/scan"/>

    <Button app:layout_constraintVertical_bias="0.875" app:layout_constraintHorizontal_bias="0.25"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:id="@+id/discardButton" app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:height="60dp" android:width="100dp" android:text="@string/discard"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@android:color/darker_gray"
            android:id="@+id/qrCodeView"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/QRCode" app:layout_constraintVertical_bias="0.35"/>
</android.support.constraint.ConstraintLayout>