<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SelectDatesActivity">

    <ScrollView
            android:layout_height="300dp" android:layout_width="300dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent" app:layout_constraintLeft_toLeftOf="parent"
            android:id="@+id/dateScroll" app:layout_constraintVertical_bias="0.3">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical" android:id="@+id/dateList">
        </LinearLayout>
    </ScrollView>

    <CheckBox android:text="@string/selectAll" android:id="@+id/selectAll"
              android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="25sp"
              app:layout_constraintBottom_toBottomOf="@+id/dateScroll" app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="@+id/generateKey"/>
    <Button android:id="@+id/backMain" android:text="@string/back"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.1" app:layout_constraintVertical_bias="0.875"
            android:height="60dp" android:width="100dp" />
    <Button android:id="@+id/discard" android:text="@string/discard"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintVertical_bias="0.875"
            android:height="60dp" android:width="100dp" />
    <Button android:id="@+id/generateKey" android:text="@string/generate"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.9" app:layout_constraintVertical_bias="0.875"
            android:height="60dp" android:width="100dp" />
</android.support.constraint.ConstraintLayout>