<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_main"
        tools:context=".MainActivity" android:layout_gravity="center">

    <TextView android:text="@string/main_header" android:id="@+id/register_header" android:textSize="15pt" 
              android:layout_width="wrap_content" android:layout_height="wrap_content" 
              app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent" 
              app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent" 
              app:layout_constraintVertical_bias="0.1"/>

    <TableLayout app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                 android:layout_width="wrap_content" android:layout_height="match_parent" android:weightSum="10"
                 android:gravity="center" app:layout_constraintVertical_bias="0.55">
        <TableRow android:minHeight="60dp" android:layout_weight="1">
            <Button android:text="@string/button" android:id="@+id/button1" style="?android:attr/buttonStyle"
                    android:layout_width="match_parent" android:layout_height="match_parent"/>
            <Button android:text="@string/button" android:id="@+id/button2" style="?android:attr/buttonStyle"
                    android:layout_width="match_parent" android:layout_height="match_parent"/>
            <Button android:text="@string/button" android:id="@+id/button3" style="?android:attr/buttonStyle"
                    android:layout_width="match_parent" android:layout_height="match_parent"/>
        </TableRow>
        <TableRow android:minHeight="60dp" android:layout_weight="1">
            <Button android:text="@string/button" android:id="@+id/button4" style="?android:attr/buttonStyle"
                    android:layout_width="match_parent" android:layout_height="match_parent"/>
            <Button android:text="@string/button" android:id="@+id/button5" style="?android:attr/buttonStyle"
                    android:layout_width="match_parent" android:layout_height="match_parent"/>
            <Button android:text="@string/button" android:id="@+id/button6" style="?android:attr/buttonStyle"
                    android:layout_width="match_parent" android:layout_height="match_parent"/>
        </TableRow>
        <TableRow android:minHeight="60dp" android:layout_weight="1">
            <Button android:text="@string/button" android:id="@+id/button7" style="?android:attr/buttonStyle" 
                    android:layout_width="match_parent" android:layout_height="match_parent"/>
            <Button android:text="@string/button" android:id="@+id/button8" style="?android:attr/buttonStyle"
                    android:layout_width="match_parent" android:layout_height="match_parent"/>
            <Button android:text="@string/button" android:id="@+id/button9" style="?android:attr/buttonStyle"
                    android:layout_width="match_parent" android:layout_height="match_parent"/>
        </TableRow>
        <TableRow android:minHeight="60dp" android:layout_weight="1">
            <Button android:text="@string/clearAll" android:id="@+id/blankButton1" style="?android:attr/buttonStyle" 
                    android:layout_width="match_parent" android:layout_height="match_parent"/>
            <Button android:text="@string/button" android:id="@+id/button0" style="?android:attr/buttonStyle"
                    android:layout_width="match_parent" android:layout_height="match_parent"/>
            <Button android:text="@string/clear" android:id="@+id/blankButton2" style="?android:attr/buttonStyle"
                    android:layout_width="match_parent" android:layout_height="match_parent"/>
        </TableRow>
    </TableLayout>
</android.support.constraint.ConstraintLayout>